[package]
name = "botv2"
version = "6.0.0"
edition = "2021"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
panic = "abort"  # Abort on panic. This is what we want for a bot.

[profile.dev]
opt-level = 1 # Optimize for faster compilation times.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = { git = "https://github.com/serenity-rs/poise", branch = "serenity-next" }
serde = "1.0"
log = "0.4"
env_logger = "0.9"
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "postgres", "chrono", "uuid", "bigdecimal", "json"] }
chrono = { version = "0.4", features = ["serde"]}
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "rustls-tls-native-roots"] }
serde_json = "1.0"
serde_yaml = "0.9"
once_cell = "1.17"
futures = "0.3"
futures-util = "0.3"
indexmap = { version = "2", features = ["serde"] }
dashmap = { version = "5", features = ["serde", "inline", "rayon"] }
strum = "0.26"
strum_macros = "0.26"
rand = "0.8"
fred = { version = "8.0.1", features = ["enable-rustls", "serde-json", "subscriber-client", "client-tracking"] }
moka = { version = "0.12.3", features = ["future", "futures-util"] }
object_store = { version = "0.9.0", features = ["serde", "serde_json", "aws", "reqwest"] }
serde_cbor = "0.11.2"
surrealdb = { version = "1.2.0"}
secrecy = "0.8"
regex = "1"
bitflags = "2"

# Anti-Raid specific
splashcore_rs = { path = "./splashcore_rs" }
gwevent = { path = "./gwevent" }
jobserver = { path = "./jobserver" }
medusa = { path = "./medusa" }

[dependencies.tokio]
version = "1"
default-features = true
features = ["full", "macros", "rt-multi-thread"]

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "next"
features = ["model", "http", "cache", "temp_cache", "rustls_backend", "unstable"]

[dependencies.kittycat]
git = "https://github.com/infinitybotlist/kittycat"
branch = "main"

[dependencies.botox]
git = "https://github.com/infinitybotlist/botox"
branch = "main"

[build-dependencies]
vergen = "7"
anyhow = "1.0"
indexmap = { version = "2", features = ["serde"] }
