[package]
name = "splashcore_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
serde_cbor = "0.11.2"
serde = { version = "1.0", features = ["derive"] }
dashmap = { version = "5", features = ["serde", "inline", "rayon"] }
object_store = { version = "0.9.0", features = ["serde", "serde_json", "aws", "reqwest"] }

[dependencies.tokio]
version = "1"
default-features = true
features = ["full", "macros", "rt-multi-thread"]