[package]
name = "jobserver"
version = "0.0.1"
edition = "2021"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
panic = "abort"  # Abort on panic. This is what we want for a bot.

[profile.dev]
opt-level = 1 # Optimize for faster compilation times.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = { git = "https://github.com/serenity-rs/poise", branch = "serenity-next" }
serde = "1.0"
log = "0.4"
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "postgres", "chrono", "uuid", "bigdecimal", "json"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "rustls-tls-native-roots"] }
chrono = { version = "0.4", features = ["serde"]}
serde_json = "1.0"
indexmap = { version = "2", features = ["serde"] }
object_store = { version = "0.9.0", features = ["serde", "serde_json", "aws", "reqwest"] }
splashcore_rs = { path = "../splashcore_rs" }
gwevent = { path = "../gwevent" }

[dependencies.tokio]
version = "1"
default-features = true
features = ["full", "macros", "rt-multi-thread"]

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "next"
features = ["model", "http", "cache", "rustls_backend", "unstable"]

[dependencies.botox]
git = "https://github.com/infinitybotlist/botox"
branch = "main"
