[package]
name = "base_data"
version = "0.1.0"
edition = "2021"

[dependencies]
poise = { git = "https://github.com/serenity-rs/poise", branch = "serenity-next" }
serde = "1.0"
log = "0.4"
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
chrono = { version = "0.4", features = ["serde"]}
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "rustls-tls-native-roots"] }
serde_json = "1.0"
serde_yaml = "0.9"
once_cell = "1.17"
futures = "0.3"
futures-util = "0.3"
indexmap = { version = "2", features = ["serde"] }
dashmap = { version = "5", features = ["serde", "inline", "rayon"] }
strum = "0.26"
strum_macros = "0.26"
rand = "0.8"
fred = { version = "9.0.3", features = ["enable-rustls", "enable-rustls-ring", "serde-json", "subscriber-client"] }
secrecy = "0.8"
regex = "1"
bitflags = "2"
extract_map = { version = "0.1", features = ["serde", "iter_mut"] }
rusty-s3 = "0.5"
url = "2"

# Anti-Raid specific
splashcore_rs = { path = "../rust.std" }

[dependencies.tokio]
version = "1"
default-features = true
features = ["full", "macros", "rt-multi-thread"]

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "next"
features = ["model", "http", "cache", "rustls_backend", "unstable"]

[dependencies.botox]
git = "https://github.com/infinitybotlist/botox"
branch = "main"
