[package]
name = "base_data"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "rustls-tls-native-roots"] }
futures-util = "0.3"
indexmap = { version = "2", features = ["serde"] }
dashmap = { version = "5", features = ["serde", "inline", "rayon"] }
fred = { version = "9.0.3", features = ["enable-rustls", "enable-rustls-ring", "serde-json", "subscriber-client"] }
async-trait = "0.1.80"

# Anti-Raid specific
splashcore_rs = { path = "../rust.std" }
proxy_support = { path = "../rust.proxy_support" }

[dependencies.tokio]
version = "1"
default-features = true
features = ["sync"]

[dependencies.botox]
git = "https://github.com/infinitybotlist/botox"
branch = "main"
