[package]
name = "bot_modules_acl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = { git = "https://github.com/serenity-rs/poise", branch = "serenity-next" }
indexmap = { version = "2", features = ["serde"] }

# Anti-Raid specific
silverpelt = { path = "../rust.silverpelt" }
