[package]
name = "bot_modules_auditlogs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = { git = "https://github.com/Anti-Raid/poise", branch = "serenity-next" }
log = "0.4"
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "rustls-tls-native-roots"] }
serde = "1.0"
serde_json = "1.0"
futures-util = "0.3"
indexmap = { version = "2", features = ["serde"] }
moka = { version = "0.12", features = ["future", "futures-util"] }
regex = "1"
url = "2"
include_dir = "0.7.3" # Needed to load templates etc.
async-trait = "0.1"

# Anti-Raid specific
silverpelt = { path = "../rust.silverpelt" }
splashcore_rs = { path = "../rust.std" }
permissions = { path = "../rust.permissions" }
module_settings = { path = "../rust.module_settings" }
gwevent = { path = "../rust.gwevent" }
templating = { path = "../rust.templating" }
std_events = { path = "../rust.stdevents" }

[dependencies.tokio]
version = "1"
features = ["sync", "macros", "rt-multi-thread"]

[dependencies.serenity]
git = "https://github.com/Anti-Raid/serenity"
branch = "next"
features = ["model", "http", "cache", "rustls_backend", "unstable"]
