[package]
name = "bot_modules_inspector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = { git = "https://github.com/Anti-Raid/poise", branch = "serenity-next" }
log = "0.4"
serde_json = "1.0"
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
chrono = { version = "0.4", features = ["serde"]}
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "rustls-tls-native-roots"] }
futures-util = "0.3"
indexmap = { version = "2", features = ["serde"] }
dashmap = { version = "6", features = ["serde", "inline", "rayon"] }
moka = { version = "0.12", features = ["future", "futures-util"] }
bitflags = "2"
async-trait = "0.1"

# Anti-Raid specific
silverpelt = { path = "../rust.silverpelt" }
splashcore_rs = { path = "../rust.std" }
splashcore_text = { path = "../rust.text" }
module_settings = { path = "../rust.module_settings" }
gwevent = { path = "../rust.gwevent" }
sandwich_driver = { path = "../rust.sandwich_driver" }
std_events = { path = "../rust.stdevents" }

[dependencies.serenity]
git = "https://github.com/Anti-Raid/serenity"
branch = "next"
features = ["model", "http", "cache", "rustls_backend", "unstable"]

[dependencies.botox]
git = "https://github.com/Anti-Raid/botox"
branch = "main"
