[package]
name = "bot_modules_limits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = { git = "https://github.com/Anti-Raid/poise", branch = "serenity-next" }
serde = "1.0"
log = "0.4"
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
chrono = { version = "0.4", features = ["serde"]}
serde_json = "1.0"
futures-util = "0.3"
indexmap = { version = "2", features = ["serde"] }
strum = "0.26"
strum_macros = "0.26"
moka = { version = "0.12", features = ["future", "futures-util"] }
governor = "0.6"
async-trait = "0.1.80"
dashmap = { version = "6", features = ["serde", "inline", "rayon"] }

# Anti-Raid specific
silverpelt = { path = "../rust.silverpelt" }
splashcore_rs = { path = "../rust.std" }
module_settings = { path = "../rust.module_settings" }
std_events = { path = "../rust.stdevents" }

[dependencies.serenity]
git = "https://github.com/Anti-Raid/serenity"
branch = "next"
features = ["model", "http", "cache", "rustls_backend", "unstable"]

[dependencies.botox]
git = "https://github.com/Anti-Raid/botox"
branch = "main"
