[package]
name = "bot_modules_punishment_autotriggers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = { git = "https://github.com/Anti-Raid/poise", branch = "serenity-next" }
serde = "1.0"
log = "0.4"
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
chrono = { version = "0.4", features = ["serde"]}
indexmap = { version = "2", features = ["serde"] }
strum = "0.26"
strum_macros = "0.26"
serde_json = "1.0"
silverpelt = { path = "../rust.silverpelt" }
splashcore_rs = { path = "../rust.std" }
sandwich_driver = { path = "../rust.sandwich_driver" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "rustls-tls-native-roots"] }
async-trait = "0.1.80"
dashmap = { version = "6", features = ["serde", "inline", "rayon"] }

# Anti-Raid specific
module_settings = { path = "../rust.module_settings" }

[dependencies.serenity]
git = "https://github.com/Anti-Raid/serenity"
branch = "next"
features = ["model", "http", "cache", "rustls_backend", "unstable"]

[dependencies.botox]
git = "https://github.com/Anti-Raid/botox"
branch = "main"

[package.metadata.cargo-machete]
ignored = ["strum"]