[package]
name = "bot_modules_punishments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = { git = "https://github.com/serenity-rs/poise", branch = "serenity-next" }
serde = "1.0"
log = "0.4"
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
chrono = { version = "0.4", features = ["serde"]}
indexmap = { version = "2", features = ["serde"] }
strum = "0.26"
strum_macros = "0.26"
silverpelt = { path = "../rust.silverpelt" }
splashcore_rs = { path = "../rust.std" }
proxy_support = { path = "../rust.proxy_support" }

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "next"
features = ["model", "http", "cache", "rustls_backend", "unstable"]

[dependencies.botox]
git = "https://github.com/infinitybotlist/botox"
branch = "main"

[package.metadata.cargo-machete]
ignored = ["strum"]