[package]
name = "bot_modules_root"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = { git = "https://github.com/serenity-rs/poise", branch = "serenity-next" }
chrono = { version = "0.4", features = ["serde"]}
serde = "1.0"
log = "0.4"
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
serde_json = "1.0"
futures-util = "0.3"
indexmap = { version = "2", features = ["serde"] }

# Anti-Raid specific
silverpelt = { path = "../rust.silverpelt" }
splashcore_rs = { path = "../rust.std" }
config = { path = "../rust.config" }
module_settings = { path = "../rust.module_settings" }

# Inter-module dependency
bot_modules_inspector = { path = "../rust.bot_modules.inspector" }

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "next"
features = ["model", "http", "cache", "rustls_backend", "unstable"]

[dependencies.botox]
git = "https://github.com/infinitybotlist/botox"
branch = "main"
