[package]
name = "bot_modules_root"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = { git = "https://github.com/serenity-rs/poise", branch = "serenity-next" }
chrono = { version = "0.4", features = ["serde"]}
futures-util = "0.3"
indexmap = { version = "2", features = ["serde"] }

# Anti-Raid specific
silverpelt = { path = "../rust.silverpelt" }
splashcore_rs = { path = "../rust.std" }
module_settings = { path = "../rust.module_settings" }

# Inter-module dependency
bot_modules_inspector = { path = "../rust.bot_modules.inspector" }
