[package]
name = "bot_modules_root"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = { git = "https://github.com/Anti-Raid/poise", branch = "serenity-next" }
chrono = { version = "0.4", features = ["serde"]}
futures-util = "0.3"
indexmap = { version = "2", features = ["serde"] }
async-trait = "0.1.80"
serde_json = "1.0"

# Anti-Raid specific
silverpelt = { path = "../rust.silverpelt" }
splashcore_rs = { path = "../rust.std" }
module_settings = { path = "../rust.module_settings" }
