[package]
name = "bot_modules_server_backups"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = { git = "https://github.com/Anti-Raid/poise", branch = "serenity-next" }
log = "0.4"
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
serde_json = "1.0"
futures-util = "0.3"
indexmap = { version = "2", features = ["serde"] }

# Anti-Raid specific
silverpelt = { path = "../rust.silverpelt" }
splashcore_rs = { path = "../rust.std" }
config = { path = "../rust.config" }

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "next"
features = ["model", "http", "cache", "rustls_backend", "unstable"]

[dependencies.botox]
git = "https://github.com/Anti-Raid/botox"
branch = "main"
