[package]
name = "bot_modules_server_member_backups"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = { git = "https://github.com/serenity-rs/poise", branch = "serenity-next" }
serde = "1.0"
log = "0.4"
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
chrono = { version = "0.4", features = ["serde"]}
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "rustls-tls-native-roots"] }
serde_json = "1.0"
futures-util = "0.3"
indexmap = { version = "2", features = ["serde"] }
dashmap = { version = "5", features = ["serde", "inline", "rayon"] }
strum = "0.26"
strum_macros = "0.26"
moka = { version = "0.12", features = ["future", "futures-util"] }
regex = "1"
bitflags = "2"
url = "2"
include_dir = "0.7.3" # Needed to load templates etc.

# Anti-Raid specific
silverpelt = { path = "../rust.silverpelt" }
splashcore_rs = { path = "../rust.std" }
permissions = { path = "../rust.permissions" }
config = { path = "../rust.config" }
module_settings = { path = "../rust.module_settings" }
gwevent = { path = "../rust.gwevent" }
proxy_support = { path = "../rust.proxy_support" }
limits = { path = "../rust.limits" }
templating = { path = "../rust.templating" }

[dependencies.tokio]
version = "1"
features = ["sync", "macros", "rt-multi-thread"]

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "next"
features = ["model", "http", "cache", "rustls_backend", "unstable"]

[dependencies.kittycat]
git = "https://github.com/infinitybotlist/kittycat"
branch = "main"

[dependencies.botox]
git = "https://github.com/infinitybotlist/botox"
branch = "main"
