[package]
name = "bot_modules_settings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = { git = "https://github.com/Anti-Raid/poise", branch = "serenity-next" }
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
serde = "1.0"
serde_json = "1.0"
futures-util = "0.3"
indexmap = { version = "2", features = ["serde"] }
async-trait = "0.1"
log = "0.4"

# Anti-Raid specific
silverpelt = { path = "../rust.silverpelt" }
splashcore_rs = { path = "../rust.std" }
permissions = { path = "../rust.permissions" }
module_settings = { path = "../rust.module_settings" }
proxy_support = { path = "../rust.proxy_support" }

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "next"
features = ["model", "http", "cache", "rustls_backend", "unstable"]

[dependencies.kittycat]
git = "https://github.com/infinitybotlist/kittycat"
branch = "main"

[dependencies.botox]
git = "https://github.com/Anti-Raid/botox"
branch = "main"
