[package]
name = "bot_modules_temporary_punishments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
futures-util = "0.3"
silverpelt = { path = "../rust.silverpelt" }
proxy_support = { path = "../rust.proxy_support" }

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "next"
features = ["model", "http", "cache", "rustls_backend", "unstable"]

[dependencies.botox]
git = "https://github.com/Anti-Raid/botox"
branch = "main"

[dependencies.tokio]
version = "1"
features = ["sync", "macros", "rt-multi-thread"]