[package]
name = "guild_changes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "rustls-tls-native-roots"] }
serde = "1.0"
serde_json = "1.0"
futures-util = "0.3"
indexmap = { version = "2", features = ["serde"] }
url = "2"
async-trait = "0.1"
strum = "0.26"
strum_macros = "0.26"
moka = { version = "0.12", features = ["future", "futures-util"] }

# Anti-Raid specific
splashcore_rs = { path = "../rust.std" }

[dependencies.tokio]
version = "1"
features = ["sync", "macros", "rt-multi-thread"]

[dependencies.serenity]
git = "https://github.com/Anti-Raid/serenity"
branch = "next"
features = ["model", "http", "cache", "rustls_backend", "unstable"]
