[package]
name = "gwevent"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
serde = "1.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"]}
indexmap = { version = "2", features = ["serde"] }
strum = "0.26"
strum_macros = "0.26"
small-fixed-array = { version = "0.4", features = ["serde"] } # From serenity 
extract_map = { version = "0.1", features = ["serde", "iter_mut"] }
templating = { path = "../rust.templating" }
base_data = { path = "../rust.base_data" }

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "next"
features = ["model", "http", "cache", "rustls_backend", "unstable"]

[build-dependencies]
glob = "0.3.1"
walkdir = "2"
indexmap = { version = "2", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

[build-dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "next"
features = ["model", "http", "cache", "rustls_backend", "unstable"]
